--- a/server/package.json
+++ b/server/package.json
@@ -11,10 +11,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/bcrypt-nodejs": "0.0.30",
+    "@types/bluebird": "^3.5.25",
+    "@types/crypto-js": "^3.1.43",
+    "@types/jsonwebtoken": "^8.3.0",
+    "bcrypt-nodejs": "0.0.3",
+    "bluebird": "^3.5.3",
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
+    "crypto-js": "^3.1.9-1",
     "express": "^4.16.4",
     "joi": "^14.3.1",
+    "jsonwebtoken": "^8.4.0",
     "morgan": "^1.9.1",
     "nodemon": "^1.18.9",
     "python": "0.0.4",
