--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,8 @@
     "jsonwebtoken": "^8.4.0",
     "morgan": "^1.9.1",
     "nodemon": "^1.18.9",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
     "python": "0.0.4",
     "sequelize": "^4.42.0",
     "sqlite3": "^4.0.6"
